
  * Fix up override info for jar-not-in-usr-share, package-installs-java-
    bytecode, debconf-is-not-a-registry, unused-debconf-template,
    apache2-reverse-dependency-calls-invoke-rc.d.
  * Only remove get-orig-source target in package-only trees in
    opinionated mode.
  * deb-scrub-obsolete: Don't treat Breaks as a Dependency field.
  * Add fixer for application-in-library-section.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 07 Dec 2022 10:18:52 +0000

lintian-brush (0.139) unstable; urgency=medium

  * deb-scrub-obsolete: support replacing dependency on transitional
    packages.
  * Add fixer for hardening-no-relro.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 27 Nov 2022 21:39:36 +0000

lintian-brush (0.138) unstable; urgency=medium

  * missing-prerequisite-for-pyproject-backend: don't add :any for all
    packages.
  * handle another case for source-is-missing.
  * Fix version string for ognibuild.
  * Drop deb-upstream-deps: moved to ognibuild.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 27 Nov 2022 13:42:40 +0000

lintian-brush (0.137) unstable; urgency=medium

  * transitional-package-should-be-oldlibs-optional: Don't move udeb
    packages to oldlibs. Closes: #1024398
  * maintainer-script-emty: Drop certainty for removing empty maintainer
    scripts that are just comments and seem to be intentional.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 22 Nov 2022 23:48:18 +0000

lintian-brush (0.136) unstable; urgency=medium

  * Handle TooManyOpenFiles from inotify, and degrade gracefully.
  * Improve info format upgrade for missing-license-paragraph-in-dep5-
    copyright and missing-license-text-in-dep5-copyright.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 15 Nov 2022 20:31:19 +0000

lintian-brush (0.135) unstable; urgency=medium

  * field-name-typo-in-dep5-copyright: Don't overwrite existing fields.
  * Various formatting improvements.
  * Fix compatibility with upcoming versions of Breezy, with slightly
    modified DirtyTracker API.